--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -6,10 +6,11 @@
         <%= gravatar_for @user %>
         <%= @user.name %>
       </h1>
-    </section>
-    
+    </section>  
+    <%= render 'shared/stats' %>  
   </aside>
   <div class="span8">
+    <%= render 'follow_form' if signed_in? %>
     <%= will_paginate @microposts %>
     <% if @user.microposts.any? %>
       <h3>Microposts (<%= @user.microposts.count %>)</h3>
