--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -2,7 +2,7 @@
 <h1>All users</h1>
 
 <%= form_tag users_path, :method => 'get' do %>
-  <%= text_field_tag :search, params[:search] %>  
+  <%= text_field_tag :search, params[:search], class: "search_box" %>  
   <%= submit_tag "Search", :name => nil  %>
 <% end %>
 
