--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,5 +1,5 @@
 <% provide(:title, 'All users') %>
-<h1>All users</h1>
+<h1 id = "all_users">All users</h1>
 
 <%= form_tag users_path, :method => 'get' do %>
   <%= text_field_tag :search, params[:search], class: "search_box" %>  
@@ -9,12 +9,7 @@
 <%= will_paginate %>
 
 <ul class="users">
-  <% if @users == [] %>
-  	<%= render 'no_results_found' %>
-  <% else %>
-  	<%= render @users %>
-  <% end %>
+  <%= render @users %>
 </ul>
-
 
 <%= will_paginate %>
